---- FEATURE FREEZE FOR SANE 1.0.14 ---
-- snapshot 1.0.14-pre1

2004-04-10  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* japi/.cvsignore: Updated.
	* japi/Jscanimage.java japi/Sane.c: Fixes from  David Neary
	  <David@phenix.fr> to make japi work with current jdks. More
	  work and documentation is still needed.
	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Minor fixes for Mustek A3 USB,
	  Genius ColorPage Vivid4 and Mustek BearPaw 2448 CS/TA Plus.
	* Makefile.in tools/Makefile.in: Added some missing files to
	  DISTFILES.

2004-04-10  Jochen Eisinger <jochen@penguin-breeder.org>

	* tools/sane-find-scanner.c, doc/sane-mustek_pp.man,
	  doc/sane-find-scanner.man: added support for detecting
	  mustek parallel port scanners.

2004-04-09  Gerhard Jaeger <gerhard@gjaeger.de>
	* backend/plustek.c: Fixes bug #300620.
	* sanei_thread.c: Fixes bug-reports #300617 & #300618,
	  all reports and patches or patch-ideas by Mattias Ellert.

2004-04-09  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-usb.c backend/snapscan-mutex.c
	  backend/Makefile.in: Use own file for mutex implementation
	  to allow for easier porting to other platforms
	  backend/snapscan-sources.c backend/snapscan.c:
	  Bugfixes for pthread implementation

2004-04-08  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan-sources.c 
	  backend/snapscan.h backend/Makefile.in:
	  Use sanei_thread functions instead of forking
	* backend/snapscan-options.c: Change title and description
	  for OPT_HIGHQUALITY to use existing i18n translations
	* backend/snapscan-usb.c: Use urb counting 
	  (thanks to Jose Alberto Reguero)

2004-04-06  Gerard Klaver   <gerard at gkall dot hobby dot nl>

	* backend/test.c changed some option group headers to advanced option
	  menu.
	
2004-04-06  Jochen Eisinger <jochen@penguin-breeder.org>
